MDEV-26902 Auxilary fts table evicts during DDL

MDEV-25702(commit 696de6d06c0eeaf7b20d5f89278ed7d62a9f204f) should've
closed the fts table further. This patch closes the table after
finishing the bulk insert operation.