storage/innobase/row/row0ftsort.cc
@@ -1788,8 +1788,6 @@ row_fts_merge_insert(
 	}
 
 exit:
-	dict_table_close(aux_table, FALSE, FALSE);
-
 	fts_sql_commit(trx);
 
 	trx->op_info = "";
@@ -1798,6 +1796,8 @@ exit:
 
 	error = ins_ctx.btr_bulk->finish(error);
 	UT_DELETE(ins_ctx.btr_bulk);
+
+	dict_table_close(aux_table, FALSE, FALSE);
 
 	trx_free_for_background(trx);
 
